// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-movable-ink's search destination action: all fields 1`] = `
Object {
  "anonymous_id": "thvLm@$Yn7k917)bo",
  "event_name": "Search",
  "metadata": Object {
    "testType": "thvLm@$Yn7k917)bo",
  },
  "query": "thvLm@$Yn7k917)bo",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "timezone": "thvLm@$Yn7k917)bo",
  "url": "thvLm@$Yn7k917)bo",
  "user_id": "thvLm@$Yn7k917)bo",
}
`;

exports[`Testing snapshot for actions-movable-ink's search destination action: required fields 1`] = `
Object {
  "anonymous_id": "thvLm@$Yn7k917)bo",
  "event_name": "Search",
  "metadata": Object {},
  "query": "thvLm@$Yn7k917)bo",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "thvLm@$Yn7k917)bo",
}
`;
